--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.05.2022 09:37:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.05.2022 10:15:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -135,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Slavky na thajsky zpusob s kokosovym mlekem, citronovou travou, gaj coj a zeleninou, psenicne nudle {L} 145</li><li>Peceny filet z cerstve prazmy s grilovanym ananasem a salsou z cerstvych rajcat, pecene brambory, salatek 175</li><li>Laosky larb s veprovym masem, cerstvou zeleninou, bylinkami, pikantni sladkokyselou zalivkou, jasminovou ryzi a arasidy 145</li><li>Spagety s platky pecene teleci kyty, tunakovou omackou s ancovickami a creme fraiche a kaparami {L} 175</li><li>Indicke birjany z basmati ryze s grilovanym tempehem, listovym spenatem a zeleninou, jogurtovy dip, salatek 145</li></ol>
+<ol><li>Slavky na thajsky zpusob s kokosovym mlekem, citronovou travou, gaj coj a zeleninou, psenicne nudle {L} 145 ( nelze do vratnych boxu!)</li><li>Peceny filet z cerstve prazmy s grilovanym ananasem a salsou z cerstvych rajcat, pecene brambory, salatek 175</li><li>Laosky larb s veprovym masem, cerstvou zeleninou, bylinkami, pikantni sladkokyselou zalivkou, jasminovou ryzi a arasidy 145</li><li>Spagety s platky pecene teleci kyty, tunakovou omackou s ancovickami a creme fraiche a kaparami {L} 175</li><li>Indicke birjany z basmati ryze s grilovanym tempehem, listovym spenatem a zeleninou, jogurtovy dip, salatek 145</li></ol>
 </td>
 </tr>
 </table>
