--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.05.2022 08:16:40</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.05.2022 08:48:09</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -59,7 +59,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 6.5.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Karotkový krém, chilli v menu <em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Karotkový krém, chilli samostatně <em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Spaghetti bolognese, parmazán, bazalka <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Zapečené cukety plněné žampiony a mozzarellou, vařený brambor, míchaný salát <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -92,7 +127,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Slavky na thajsky zpusob s kokosovym mlekem, citronovou travou, gaj coj a zeleninou, psenicne nudle {L} 145 ( nelze do vratnych boxu!)</li><li>Peceny filet z cerstve prazmy s grilovanym ananasem a salsou z cerstvych rajcat, pecene brambory, salatek 175</li><li>Laosky larb s veprovym masem, cerstvou zeleninou, bylinkami, pikantni sladkokyselou zalivkou, jasminovou ryzi a arasidy 145</li><li>Spagety s platky pecene teleci kyty, tunakovou omackou s ancovickami a creme fraiche a kaparami {L} 175</li><li>Indicke birjany z basmati ryze s grilovanym tempehem, listovym spenatem a zeleninou, jogurtovy dip, salatek 145</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a gaj coj, jarni bramborovy salat s redkvickami, cibulkou a zelenymi bylinkami 145</li><li>Peceny filet z cerstveho morskeho vlka s citronem a gaj coj, jarni bramborovy salat s redkvickami, cibulkou a zelenymi bylinkami 175</li><li>Libanonska hovezi govurma s korenim baharat v arabskem chlebu s cizrnovym hummusem, korenena ryze, salatek {L} 145</li><li>Italske houbove rizoto na bilem vine s parmezanem a pecenym kurecim stehnem {volny chov}, salatek 175</li><li>Baba ganus – arabsky dip z pecenych lilku a cervene cocky s tahini, sazene vejce, arabsky chleb, salatek {L} 145</li></ol>
 </td>
 </tr>
 </table>
